--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,7 @@ textarea {
     font-family: 'JetBrains Mono', 'D2Coding', monospace !important;
     font-size: 16px !important;
     line-height: 1.6;
+    tab-size: 2;
 }
 
 .nord-dark textarea {
