--- a/static/style.css
+++ b/static/style.css
@@ -240,6 +240,37 @@ textarea {
     color: #88C0D0 !important;
 }
 
+:root {
+    --vh: 1vh;
+}
+
+@supports (-webkit-touch-callout: none) {
+    body {
+        -webkit-text-size-adjust: 100%;
+        -webkit-tap-highlight-color: transparent;
+        padding-left: env(safe-area-inset-left);
+        padding-right: env(safe-area-inset-right);
+    }
+}
+
+html, body {
+    min-height: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+    body {
+        height: calc(var(--vh, 1vh) * 100);
+        min-height: calc(var(--vh, 1vh) * 100);
+        touch-action: pan-y;
+    }
+    
+    #app {
+        height: 100%;
+        overflow: hidden;
+    }
+}
+
 /* Animations */
 @keyframes fadeInUp {
     from {
