--- a/static/style.css
+++ b/static/style.css
@@ -290,7 +290,8 @@ textarea {
     }
 }
 
-html, body {
+html,
+body {
     min-height: 100%;
     height: 100%;
 }
@@ -301,7 +302,7 @@ html, body {
         min-height: calc(var(--vh, 1vh) * 100);
         touch-action: manipulation;
     }
-    
+
     #app {
         height: 100%;
         overflow: hidden;
@@ -481,6 +482,7 @@ html, body {
     background-color: rgba(255, 235, 59, 0.5);
     border-radius: 2px;
 }
+
 .dark .search-highlight {
     background-color: rgba(235, 203, 139, 0.6);
     color: white;
